added google analytics

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="{{ .Page.Language | default "en" }}">
   {{ partial "head" . }}
+  <head>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JG5TG1XCN"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+      
+        gtag('config', 'G-7JG5TG1XCN');
+      </script>
+  </head>
   <body>
     {{ partial "site-header" . }}
     <div id="wrapper">
