--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,4 +26,14 @@
   {{ .Scratch.Set "Permalink" .Permalink }}
   {{ .Scratch.Set "Title" .Title }}
   {{ .Scratch.Set "Author" .Author }}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JG5TG1XCN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-7JG5TG1XCN');
+  </script>
+
 </head>
