image path correction

--- a/layouts/post/featured.html
+++ b/layouts/post/featured.html
@@ -6,6 +6,7 @@
   </a>
 {{ else if .Params.featured }}
   <a href="{{ .RelPermalink }}" class="image featured">
-    <img src="{{ (path.Join "img" (cond (eq .Params.featuredpath "date") (.Page.Date.Format "2006/01") (.Params.featuredpath)) .Params.featured) | relURL }}" alt="{{ .Params.featuredalt }}">
+    <img src="{{ (path.Join "uploads"  .Params.featured) | relURL }}" alt="{{ .Params.featuredalt }}">
   </a>
 {{ end }}
+<!-- (cond (eq .Params.featuredpath "date") (.Page.Date.Format "2006/01") (.Params.featuredpath)) -->
